--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ authors = ["Jerome Rasky <jyrome.112@gmail.com>"]
 [dependencies]
 serde = { version = "*", git = "https://github.com/serde-rs/serde", default-features = false, features = ["collections"] }
 byteorder = { version = "*", default-features = false }
+
+[features]
+default = []
+
+std = ["serde/std"]
