--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,14 @@
 name = "corepack"
 version = "0.1.0"
 authors = ["Jerome Rasky <jyrome.112@gmail.com>"]
+build = "build.rs"
 
 [dependencies]
 serde = { version = "0.8", default-features = false, features = ["collections"] }
-serde_macros = { version = "0.8" }
-byteorder = { version = "0.5.3", default-features = false }
+byteorder = { version = "0.5", default-features = false }
+
+[build-dependencies]
+serde_codegen = { version = "0.8" }
 
 [features]
 default = []
