--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,4 @@ serde_derive = "~1.0.3"
 default = ["std"]
 
 std = ["serde/std"]
-
-serde-collections = ["serde/collections"]
-alloc = []
-collections = ["alloc"]
-nightly = ["collections", "serde-collections"]
+collections = ["serde/collections"]
