--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ license = "MPL-2.0"
 
 [dependencies]
 serde = { version = "~1.0.10", default-features = false }
-byteorder = { version = "~1.0", default-features = false }
+byteorder = { version = "1.0", default-features = false }
 
 [dev-dependencies]
 serde_derive = "~1.0.10"
