--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "corepack"
-version = "0.4.0"
+version = "0.4.1"
 authors = ["Jerome Rasky <jyrome.112@gmail.com>"]
 description = "A no_std support for messagepack in serde"
 documentation = "https://docs.rs/corepack"
@@ -10,11 +10,11 @@ keywords = ["messagepack", "binary", "encoding", "serialize"]
 license = "MPL-2.0"
 
 [dependencies]
-serde = { version = "~1.0.10", default-features = false }
-byteorder = { version = "~1.2.3", default-features = false }
+serde = { version = "1", default-features = false }
+byteorder = { version = "1", default-features = false }
 
 [dev-dependencies]
-serde_derive = "~1.0.10"
+serde_derive = "1"
 
 [features]
 default = ["std"]
